--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 <input type="text" id="name" name="name" required>
             </div>
             <div class="form-group">
-                <label for="designation">હોદ્દો:</label>
+                <label for="designation">હોદ્દો / ગામ:</label>
                 <input type="text" id="designation" name="designation" required>
             </div>
             <div class="form-group">
